# rtt-test

./: Cargo.toml  Embed.toml  memory.x
.cargo/: config.toml
src/: main.rs
