[package]
name = "rtt-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"
rtt-target = { version="0.3.1", features = ["cortex-m"] }


[dependencies.mkl82z7-pac]
version = "0.1.1"
path = "../mkl82z7-pac"
features = ["rt"]
